		system default to the database driver. (#21)
	- Set Precedence: junk on outgoing mail. (#2)
	- Add floodserv flag to chanserv's info. (#30)
	- Removed stray tab in HELP_SET_PRIVATE_LONG. (#27)
	- Add status command to nickserv. (#3)
	- Fix nickserv status.
	- make MLOCK accept -l and -k, turn off AUTOLIMIT if -l set. (#32)
	- Enforced nicknames shouldn't be opers or admins, also set realname to
		sensible things if so desired. (#34)
	- STATS spy notice. (#17)
	- FloodServ now uses BlockHeap, now you can monitor usage in STATS z
	- Actually implement chanserv verbose, instead of pretending that we
		 do. (#50)
	- Add various ORDER BY clauses to help with listing and delete by
		 index. (#39)
	- Add CLEAR QUIETS, UNQUIET, and remove quiets in EXPIREBANS. (#25)
	- FloodServ clears up +q's on it's own, FloodServ GC iterates only FS
		channels more often and all valid channels. (#6)
	- ChanServ CLEAR MODES implemented. (#33)
	- FloodServ uses much less memory on startup, use dlink_list instead of
		array
	- Make FloodServ debug message less frequent but just as helpful
	- Make FloodServ leave channels when he's the last one in it or if it's
		dropped. (#55)
	- Part callback should always fire before destroy callback, move remove_user
		after part callback is fired.
	- FloodServ shouldn't keep yet another list for the channels it's joined to
	- Redo JupeServ as part of OperServ, persistent saving to db and reloaded on
		reconnect, also SQUIT deletes from the db.
	- Do an snote when someone removes an akill.  Also fix a memory leak when
		someone removes an akill. (#48)
	- Add CERT command for authentication with client certificate fingerprints.
	- Make use of the +P umode in oftc 1.6.
	- Don't rb_raise in places we can't recover from
	- Don't use ServiceBase it breaks rubys gc bad. (#19)

2007-10-31 - 1.1.1+weasel
	Bugfixes:
	- Fix a core when enforcing akicks.

2007-??-?? - 1.1.2
	Bugfixes:
	- Remove clients from the enforce list when identified by CERTFP (#82)